--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#0564bd" />
-    <meta name="author" content="Ahmed Zougari" />
+    <meta name="author" content="FATU AMARA" />
     <link rel="icon" type="image/png" href="./img/favicon.png" />
     <meta
       name="keywords"
-      content="ahmed, zougari, zougari47, ibnelkhayat, developer, javascript, marrakech, freelancer, website, programmer, site, ahmedzougari"
+      content="Health, Policy, Professional, Health Professional"
     />
     <meta
       name="description"
-      content="I'm a Frontend Developer based in Morocco who is passionate about delivering value to businesses through technology. I love the challenge of finding creative solutions to problems, and I enjoy collaborating with teams to achieve great results."
+      content="Fatu Amara currently works as a Project Manager and has 2+ years of full-time experience working on
+              city-wide initiatives that promote the wellbeing of New Yorkers. She has experience in management,
+              coordination, qualitative and quantitative data analysis."
     />
     <meta
       name="google-site-verification"
@@ -33,7 +35,7 @@
 
       gtag('config', 'G-F3SK5CL6LE')
     </script>
-    <title>Ahmed Zougari - Frontend/Fullstack Developer</title>
+    <title>FATU AMARA - Health and Policy Professional</title>
   </head>
   <body
     data-bs-spy="scroll"
@@ -109,7 +111,7 @@
                 data-aos-duration="1000"
               >
                 <p>Hello! 👋 My name is</p>
-                <h1>AHMED ZOUGARI</h1>
+                <h1>FATU AMARA</h1>
                 <p><span id="headline"></span></p>
                 <div class="social-links mx-auto mx-lg-0">
                   <div class="row">
@@ -182,22 +184,23 @@
                 >
                   <h1>ABOUT ME</h1>
                   <p>
-                    I'm a Frontend Developer based in Morocco who is passionate
-                    about delivering value to businesses through technology. I
-                    love the challenge of finding creative solutions to
-                    problems, and I enjoy collaborating with teams to achieve
-                    great results.<br />
+                    Fatu Amara currently works as a Project Manager and has 2+ years of full-time experience working
+                    on city-wide initiatives that promote the wellbeing of New Yorkers. She has experience in
+                    management, coordination, qualitative and quantitative data analysis.
+                    <br />
                   </p>
                   <p>
-                    I am dedicated to keeping up-to-date with the latest
-                    technologies and trends to provide the best solutions for my
-                    clients.
+                    As a Watson Fellow, she worked on public health issues in the US, Rwanda, and the UK. Her work
+                    includes program management, qualitative and quantitative research analysis, literature reviews,
+                    and scientific journal writing on SARS, Ebola, and COVID-19 issues. She plans to work at the
+                    intersection of health and policy to lead large scale programs that ensure the well-being of
+                    vulnerable communities.
                   </p>
                   <p>
-                    I pay great attention to detail in the design and
-                    development of my projects. My ultimate goal is to create
-                    software that is both user-friendly and impactful in
-                    achieving the client's objectives.
+                    She graduated with honors and was awarded the American Chemical Society (ACS) Accredited BS in
+                    Chemistry from CUNY College of Staten Island (CSI). As President of the Student Government, she
+                    represented the 14,000 student body as an Executive Board member to five college boards, managed
+                    the $400,000 budget, and developed the Student Government Internship Program.
                   </p>
                 </section>
               </div>
