--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,12 @@
       gtag('config', 'G-F3SK5CL6LE')
     </script>
     <title>FATU AMARA - Health and Policy Professional</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.8.0/lottie.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.11.0/lottie.min.js"
+      integrity="sha512-XCthc/WzPfa+oa49Z3TI6MUK/zlqd67KwyRL9/R19z6uMqBNuv8iEnJ8FWHUFAjC6srr8w3FMZA91Tfn60T/9Q=="
+      crossorigin="anonymous" referrerpolicy="no-referrer">
+    </script>
   </head>
   <body
     data-bs-spy="scroll"
@@ -121,11 +127,6 @@
                       </a>
                     </div>
                     <div class="col-3">
-                      <a href="https://github.com/zougari47" target="_blank">
-                        <i class="bi bi-github"></i>
-                      </a>
-                    </div>
-                    <div class="col-3">
                       <a
                         href="https://www.linkedin.com/in/zougari47/"
                         target="_blank"
@@ -184,6 +185,146 @@
                 >
                   <h1>ABOUT ME</h1>
                   <p>
+                    Fatu Amara graduated with honors and was awarded the American Chemical Society (ACS)
+                    Accredited BS in Chemistry from CUNY College of Staten Island (CSI).
+                    <br />
+                  </p>
+                  <p>
+                    As President of the Student Government, she represented the 14,000 student body as an Executive
+                    Board member to five college boards, managed the $400,000 budget, and developed the Student
+                    Government Internship Program.
+                  </p>
+                  <p>
+                    As a Watson Fellow, she worked on public health issues in the US, Rwanda, and the UK. Her work
+                    includes program management, qualitative and quantitative research analysis, literature reviews,
+                    and scientific journal writing on SARS, Ebola, and COVID-19 issues.
+                  </p>
+                  <p>
+                    She plans to work at the intersection of health and policy to lead large scale programs that
+                    ensure the well-being of vulnerable communities.
+                  </p>
+                </section>
+              </div>
+              <div class="col-12 col-lg-6 d-grid align-content-center">
+                <section
+                  id="skills_section"
+                  class="mb-5 mb-lg-0"
+                  data-aos="fade-left"
+                  data-aos-duration="1000"
+                >
+                  <h1>SKILLS</h1>
+                  <div class="row">
+                    <div class="col-6 col-md-4">
+                      <img src="./img/stack-icons/policy_analysis.svg" alt="html" />
+                      <span>Policy Analysis</span>
+                    </div>
+                    <div class="col-6 col-md-4">
+                      <img src="./img/stack-icons/health_economics.svg" alt="css" />
+                      <span>Health Economics</span>
+                    </div>
+                    <div class="col-6 col-md-4">
+                      <img src="./img/stack-icons/health_law.svg" alt="sass" />
+                      <span>Health Law and Ethics</span>
+                    </div>
+                    <div class="col-6 col-md-4">
+                      <img
+                        src="./img/stack-icons/health_systems.svg"
+                        alt="bootstrap"
+                      />
+                      <span>Health Systems and Services</span>
+                    </div>
+                    <div class="col-6 col-md-4">
+                      <img
+                        src="./img/stack-icons/health_policy.svg"
+                        alt="tailwind css"
+                      />
+                      <span>Health Policy Development and Advocacy</span>
+                    </div>
+                    <div class="col-6 col-md-4">
+                      <img
+                        src="./img/stack-icons/data_analysis.svg"
+                        alt="javascript"
+                      />
+                      <span>Data Analysis and Informatics</span>
+                    </div>
+                    <div class="col-6 col-md-4">
+                      <img
+                        src="./img/stack-icons/health_communication.svg"
+                        alt="typescript"
+                      />
+                      <span>Health Communication</span>
+                    </div>
+                    <div class="col-6 col-md-4">
+                      <img src="./img/stack-icons/stakeholder_engagement.svg" alt="react" />
+                      <span>Stakeholder Engagement and Collaboration</span>
+                    </div>
+                    <div class="col-6 col-md-4">
+                      <img src="./img/stack-icons/evidence-based Practice.svg" alt="next" />
+                      <span>Research and Evidence-Based Practice</span>
+                    </div>
+                    <div class="col-6 col-md-4">
+                      <img src="./img/stack-icons/strategic_planning.svg" alt="node" />
+                      <span>Strategic Planning and Management</span>
+                    </div>
+                    <div class="col-6 col-md-4">
+                      <img src="./img/stack-icons/political_acumen.svg" alt="git/github" />
+                      <span>Political Acumen</span>
+                    </div>
+                    <div class="col-6 col-md-4">
+                      <img src="./img/stack-icons/cultural_competence.svg" alt="Astro" />
+                      <span>Cultural Competence and Health Equity</span>
+                    </div>
+                  </div>
+                </section>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- ==== end About ==== -->
+
+
+
+        <div id="about">
+          <div class="container">
+            <div class="row">
+
+              <div class="col-12 col-lg-6 d-grid align-content-center">
+                <section
+
+                  class="mb-5 mb-lg-0"
+                  data-aos="fade-left"
+                  data-aos-duration="1000"
+                >
+                  <div class="row ">
+
+                    <div id="lottie_container"></div>
+
+                    <script>
+                      // Initialize the Lottie animation
+                      var animation = bodymovin.loadAnimation({
+                        container: document.getElementById('lottie_container'),
+                        renderer: 'svg',
+                        loop: true,
+                        autoplay: true,
+                        path: './img/lottie/doctor_1.json' // Replace with the path to your Lottie animation JSON file
+                      });
+                    </script>
+
+                  </div>
+                </section>
+              </div>
+
+
+              <div class="col-12 col-lg-6 d-grid align-content-center">
+                <section
+                  id="about_section"
+                  class="my-5 my-lg-0"
+                  data-aos="fade-right"
+                  data-aos-mirror="true"
+                  data-aos-duration="1500"
+                >
+                  <h1>HEALTH AND POLICY PROFESSIONAL</h1>
+                  <p>
                     Fatu Amara currently works as a Project Manager and has 2+ years of full-time experience working
                     on city-wide initiatives that promote the wellbeing of New Yorkers. She has experience in
                     management, coordination, qualitative and quantitative data analysis.
@@ -204,82 +345,13 @@
                   </p>
                 </section>
               </div>
-              <div class="col-12 col-lg-6 d-grid align-content-center">
-                <section
-                  id="skills_section"
-                  class="mb-5 mb-lg-0"
-                  data-aos="fade-left"
-                  data-aos-duration="1000"
-                >
-                  <h1>SKILLS</h1>
-                  <div class="row">
-                    <div class="col-6 col-md-4">
-                      <img src="./img/stack-icons/html.svg" alt="html" />
-                      <span>HTML</span>
-                    </div>
-                    <div class="col-6 col-md-4">
-                      <img src="./img/stack-icons/css.svg" alt="css" />
-                      <span>CSS</span>
-                    </div>
-                    <div class="col-6 col-md-4">
-                      <img src="./img/stack-icons/sass.svg" alt="sass" />
-                      <span>SASS</span>
-                    </div>
-                    <div class="col-6 col-md-4">
-                      <img
-                        src="./img/stack-icons/bootstrap.svg"
-                        alt="bootstrap"
-                      />
-                      <span>Bootstrap</span>
-                    </div>
-                    <div class="col-6 col-md-4">
-                      <img
-                        src="./img/stack-icons/tailwind.svg"
-                        alt="tailwind css"
-                      />
-                      <span>Tailwind</span>
-                    </div>
-                    <div class="col-6 col-md-4">
-                      <img
-                        src="./img/stack-icons/javascript.svg"
-                        alt="javascript"
-                      />
-                      <span>JavaScript</span>
-                    </div>
-                    <div class="col-6 col-md-4">
-                      <img
-                        src="./img/stack-icons/typescript.svg"
-                        alt="typescript"
-                      />
-                      <span>Typescript</span>
-                    </div>
-                    <div class="col-6 col-md-4">
-                      <img src="./img/stack-icons/react.svg" alt="react" />
-                      <span>React</span>
-                    </div>
-                    <div class="col-6 col-md-4">
-                      <img src="./img/stack-icons/next.svg" alt="next" />
-                      <span>Next</span>
-                    </div>
-                    <div class="col-6 col-md-4">
-                      <img src="./img/stack-icons/node.svg" alt="node" />
-                      <span>Node</span>
-                    </div>
-                    <div class="col-6 col-md-4">
-                      <img src="./img/stack-icons/git.svg" alt="git/github" />
-                      <span>Git / GitHub</span>
-                    </div>
-                    <div class="col-6 col-md-4">
-                      <img src="./img/stack-icons/astro.svg" alt="Astro" />
-                      <span>Astro</span>
-                    </div>
-                  </div>
-                </section>
-              </div>
             </div>
           </div>
         </div>
         <!-- ==== end About ==== -->
+
+
+
 
         <!-- ==== Portfolio === -->
         <section id="portfolio" class="">
