--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#0564bd" />
     <meta name="author" content="FATU AMARA" />
     <link rel="icon" type="image/png" href="./img/favicon.png" />
+    <link rel="stylesheet" href="./sass/main.scss">
     <meta
       name="keywords"
       content="Health, Policy, Professional, Health Professional"
